Windows CE: fix multiple QAction::triggered() signals

Adding the same menu action object to n menu bars resulted in n
QAction::triggered() signals. Now, we're comparing the active window
with the parent HWND of the menu bar before triggering.

Task-number: QTBUG-10402
Reviewed-by: thartman